# bigspring-ai-take-home

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  config.py  main.py  pyproject.toml  run_ingestion.py
backend/database/: init_db.py  models.py
backend/ingestion/: chunker.py  ingest.py
backend/search/: fallback.py  guardrails.py  history.py  knowledge.py  router.py
backend/services/: auth.py  recommendations.py  streaming.py
deploy/: entrypoint-backend.sh  setup-ec2.sh
deploy/nginx/: nginx.conf
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: CitationCard.tsx  CompanySelector.tsx  RecommendationPanel.tsx  SearchBar.tsx  StreamingAnswer.tsx  ThoughtTrace.tsx  UserSelector.tsx
frontend/src/lib/: api.ts
